--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,7 +4,8 @@
     <Version>5.0.0-beta.1</Version>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <LangVersion>latest</LangVersion>
-    <NoWarn>CS1591</NoWarn>
+    <NoWarn>CS1591;CS0618</NoWarn>
+    <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>$(SolutionDir)Key.snk</AssemblyOriginatorKeyFile>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
