--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-image: Visual Studio 2017
+image: Visual Studio 2019 Preview
 build_script:
 - cmd: |
     msbuild -restore Fody.sln /p:Configuration=Release /verbosity:minimal
