--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -10,6 +10,7 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.0.461" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="ApprovalTests" Version="3.0.22" />
     <PackageReference Include="Moq" Version="4.10.1" />
