--- a/FodyPackaging/buildMultiTargeting/FodyPackaging.targets
+++ b/FodyPackaging/buildMultiTargeting/FodyPackaging.targets
@@ -1,3 +1,7 @@
 <Project>
-  <Import Project="../build/FodyPackaging.targets" />
+  <Target
+    Name="ErrorForMultiFrameworkTarget"
+    AfterTargets="AfterCompile">
+    <Error Text="FodyPackaging expects the weaving project to target only netstandard2.0 in a TargetFramework node: &lt;TargetFramework&gt;netstandard2.0&lt;/TargetFramework&gt;" />
+  </Target>
 </Project>
