--- a/Integration/WithEmbeddedPdb/WithEmbeddedPdb.csproj
+++ b/Integration/WithEmbeddedPdb/WithEmbeddedPdb.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <DebugType>embedded</DebugType>
   </PropertyGroup>
   <ItemGroup>
