--- a/Integration/WithOnlyInSolutionWeaver/WithOnlyInSolutionWeaver.csproj
+++ b/Integration/WithOnlyInSolutionWeaver/WithOnlyInSolutionWeaver.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="$(IntegrationVersion)" />
-    <WeaverFiles Include="$(SolutionDir)Weavers\bin\$(Configuration)\$(TargetFramework)\Weavers.dll" />
+    <WeaverFiles Include="$(SolutionDir)Weavers\bin\$(Configuration)\netstandard2.0\Weavers.dll" />
   </ItemGroup>
 </Project>
