--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
   <PropertyGroup>
-    <Version>5.0.0-beta.5</Version>
+    <Version>5.0.0-beta.7</Version>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <LangVersion>latest</LangVersion>
     <NoWarn>CS1591;CS0618</NoWarn>
@@ -27,11 +27,11 @@
   </Target>
 
   <ItemGroup>
-    <WeaverFiles Include="$(SolutionDir)SampleWeaver.Fody\bin\$(Configuration)\Net472\SampleWeaver.Fody.dll" />
+    <WeaverFiles Include="$(SolutionDir)SampleWeaver.Fody\bin\$(Configuration)\netstandard2.0\SampleWeaver.Fody.dll" />
   </ItemGroup>
 
   <PropertyGroup>
-    <FodyAssembly>$(SolutionDir)Fody\bin\$(Configuration)\Net472\Fody.dll</FodyAssembly>
+    <FodyAssembly>$(SolutionDir)Fody\bin\$(Configuration)\netstandard2.0\Fody.dll</FodyAssembly>
   </PropertyGroup>
 
 </Project>
