--- a/Integration/WithEmbeddedPdb/WithEmbeddedPdb.csproj
+++ b/Integration/WithEmbeddedPdb/WithEmbeddedPdb.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="$(IntegrationVersion)" />
+    <PackageReference Include="SampleWeaver.Fody" Version="$(IntegrationVersion)" />
     <PackageReference Include="Virtuosity.Fody" Version="1.21.3" />
   </ItemGroup>
 </Project>
