--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -15,7 +15,8 @@
     <PackageReference Include="ApprovalTests" Version="3.0.22" />
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="ObjectApproval" Version="8.0.3" />
-    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="Xunit" Version="2.4.1" />
+    <PackageReference Include="XunitLogger" Version="1.0.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
