--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,6 @@
 image: Visual Studio 2019 Preview
+skip_commits:
+  message: /Merge pull request.*/
 build_script:
 - cmd: |
     msbuild -restore Fody.sln /p:Configuration=Release /verbosity:minimal
