verify msbuild version

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -8,6 +8,7 @@
     <FodyAssembly Condition="'$(FodyAssembly)' == ''">$(FodyAssemblyDirectory)\Fody.dll</FodyAssembly>
     <DefaultItemExcludes>$(DefaultItemExcludes);FodyWeavers.xsd</DefaultItemExcludes>
     <FodyGenerateXsd Condition="'$(FodyGenerateXsd)' == ''">true</FodyGenerateXsd>
+    <MsBuildMajorVersion>$([System.Version]::Parse($(MSBuildVersion)).Major)</MsBuildMajorVersion>
   </PropertyGroup>
 
   <ItemGroup Condition="Exists('$(ProjectWeaverXml)')">
@@ -33,6 +34,8 @@
       Inputs="@(IntermediateAssembly);$(ProjectWeaverXml)"
       Outputs="$(IntermediateOutputPath)$(MSBuildProjectFile).Fody.CopyLocal.cache">
 
+    <Error Condition="$(MsBuildMajorVersion) &lt; 16"
+           Text="Fody is only supported on MSBuild 16 and above. Current version: $(MsBuildMajorVersion)." />
     <Fody.WeavingTask
         AssemblyFile="@(IntermediateAssembly)"
         IntermediateDirectory="$(ProjectDir)$(IntermediateOutputPath)"
