Revert "remove ncrunch file copy hack"
This reverts commit e64fc1ddfa29c41c04e5e1bff6452942a12b9913.

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -17,6 +17,12 @@
     <CustomAdditionalCompileInputs Include="$(ProjectWeaverXml)" />
   </ItemGroup>
 
+  <!-- Support for NCrunch -->
+  <ItemGroup Condition="'$(NCrunch)' == '1'">
+    <None Include="$(FodyAssemblyDirectory)\*.*" />
+    <None Include="@(WeaverFiles)" />
+  </ItemGroup>
+
   <UsingTask TaskName="Fody.WeavingTask" AssemblyFile="$(FodyAssembly)" />
   <UsingTask TaskName="Fody.UpdateReferenceCopyLocalTask" AssemblyFile="$(FodyAssembly)" />
   <UsingTask TaskName="Fody.VerifyTask" AssemblyFile="$(FodyAssembly)" />
