--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -35,8 +35,7 @@
       Inputs="@(IntermediateAssembly);$(ProjectWeaverXml)"
       Outputs="$(IntermediateOutputPath)$(MSBuildProjectFile).Fody.CopyLocal.cache">
 
-    <!-- TODO: remove the OS check when netcore3 can be deployed to MacOS -->
-    <Error Condition="($(MsBuildMajorVersion) &lt; 16) And $(OS) == 'Windows_NT'"
+    <Error Condition="($(MsBuildMajorVersion) &lt; 16)
            Text="Fody is only supported on MSBuild 16 and above. Current version: $(MsBuildMajorVersion)." />
     <Fody.WeavingTask
         AssemblyFile="@(IntermediateAssembly)"
