--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,6 @@
-image: Visual Studio 2019 Preview
+image: Visual Studio 2019
 skip_commits:
   message: /doco|Merge pull request.*/
-install:
-- cmd: choco install dotnetcore-sdk --pre
 build_script:
 - cmd: |
     msbuild -restore Fody.sln /p:Configuration=Release /verbosity:minimal
