--- a/Fody/Fody.nuspec
+++ b/Fody/Fody.nuspec
@@ -15,11 +15,11 @@
   </metadata>
   <files>
     <file src=".\bin\$configuration$\net472\Fody*.dll" target="netclassictask" />
-    <file src=".\bin\$configuration$\net472\Mono*.dll" target="netclassictask" />
-    <file src=".\bin\$configuration$\net472\Mono*.pdb" target="netclassictask" />
+    <file src="..\FodyIsolated\bin\$configuration$\net472\Fody*.dll" target="netclassictask" />
+    <file src="..\Lib\Cecil\net40\Mono*.*" target="netclassictask" />
     <file src=".\bin\$configuration$\netstandard2.0\Fody*.dll" target="netstandardtask" />
-    <file src=".\bin\$configuration$\netstandard2.0\Mono*.dll" target="netstandardtask" />
-    <file src=".\bin\$configuration$\netstandard2.0\Mono*.pdb" target="netstandardtask" />
+    <file src="..\FodyIsolated\bin\$configuration$\netstandard2.0\Fody*.dll" target="netstandardtask" />
+    <file src="..\Lib\Cecil\netstandard2.0\Mono*.*" target="netstandardtask" />
     <file src="Fody.targets" target="build" />
   </files>
 </package>
