Check the item metadata of the PackageReference items provided by MSBuild

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -52,6 +52,7 @@
         DocumentationFile="@(DocFileItem->'%(FullPath)')"
         WeaverFiles="@(WeaverFiles)"
         WeaverConfiguration="$(WeaverConfiguration)"
+        PackageReferences="@(PackageReference)"
         NCrunchOriginalSolutionDirectory="$(NCrunchOriginalSolutionDir)"
         IntermediateCopyLocalFilesCache="$(IntermediateOutputPath)$(MSBuildProjectFile).Fody.CopyLocal.cache"
         GenerateXsd="$(FodyGenerateXsd)"
