--- a/Integration/Tests/Tests.csproj
+++ b/Integration/Tests/Tests.csproj
@@ -4,12 +4,12 @@
     <TargetFrameworks>net472;netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Reflection.Metadata" Version="1.8.0" />
+    <PackageReference Include="System.Reflection.Metadata" Version="5.0.0" />
     <PackageReference Include="Xunit" Version="2.4.1" />
-    <PackageReference Include="XunitContext" Version="1.8.0" />
-    <PackageReference Include="Verify.Xunit" Version="1.24.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="XunitContext" Version="3.0.0" />
+    <PackageReference Include="Verify.Xunit" Version="11.1.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     <ProjectReference Include="..\WithEmbeddedPdb\WithEmbeddedPdb.csproj" />
     <ProjectReference Include="..\WithNoPdb\WithNoPdb.csproj" />
     <ProjectReference Include="..\WithNugetAndInSolutionWeavers\WithNugetAndInSolutionWeavers.csproj" />
