Fix #985: Build fails when using dotnet cli and strong assembly

--- a/Fody/Fody.targets
+++ b/Fody/Fody.targets
@@ -47,6 +47,7 @@
         SolutionDirectory="$(SolutionDir)"
         References="@(ReferencePath)"
         SignAssembly="$(SignAssembly)"
+        DelaySign="$(DelaySign)"
         ReferenceCopyLocalFiles="@(ReferenceCopyLocalPaths)"
         DefineConstants="$(DefineConstants)"
         DocumentationFile="@(DocFileItem->'%(FullPath)')"
