--- a/vsts-integration.yml
+++ b/vsts-integration.yml
@@ -1,47 +1,73 @@
-resources:
-- repo: self
-  clean: true
-
 pool:
   vmImage: 'windows-latest'
 
-steps:
-- powershell: |
-   (new-object Net.WebClient).DownloadString("https://raw.github.com/tom-englert/BuildScripts/master/BuildScripts.ps1") | iex
-   Project-SetVersion "Directory.Build.props"  | Build-AppendVersionToBuildNumber
-  displayName: 'Patch version'
+jobs:
+- job: 'MSBuild'
+  steps:
+  - powershell: |
+     (new-object Net.WebClient).DownloadString("https://raw.github.com/tom-englert/BuildScripts/master/BuildScripts.ps1") | iex
+     Project-SetVersion "Directory.Build.props"  | Build-AppendVersionToBuildNumber
+    displayName: 'Patch version'
 
-- task: MSBuild@1
-  displayName: 'Build Solution'
-  inputs:
-    solution: 'Fody.sln'
-    platform: 'any cpu'
-    configuration: 'release'
-    msbuildArguments: '-restore'
-    clean: true
+  - task: MSBuild@1
+    displayName: 'Build Solution'
+    inputs:
+      solution: 'Fody.sln'
+      platform: 'any cpu'
+      configuration: 'release'
+      msbuildArguments: '-restore'
+      clean: true
 
-- task: VSTest@2
-  displayName: 'VsTest - testAssemblies'
-  inputs:
-    testAssemblyVer2: |
-     **\release\*test*.dll
-     !**\obj\**
-    platform: 'any cpu'
-    configuration: 'release'
+  - task: VSTest@2
+    displayName: 'VsTest - testAssemblies'
+    inputs:
+      testAssemblyVer2: |
+       **\release\*test*.dll
+       !**\obj\**
+      platform: 'any cpu'
+      configuration: 'release'
 
-- task: CopyFiles@2
-  displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
-  inputs:
-    SourceFolder: '$(system.defaultworkingdirectory)'
-    Contents: 'nugets\*.nupkg'
-    TargetFolder: '$(build.artifactstagingdirectory)'
-    flattenFolders: true
+  - task: CopyFiles@2
+    displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
+    inputs:
+      SourceFolder: '$(system.defaultworkingdirectory)'
+      Contents: 'nugets\*.nupkg'
+      TargetFolder: '$(build.artifactstagingdirectory)'
+      flattenFolders: true
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: nuget'
-  inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
-    ArtifactName: nuget
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact: nuget'
+    inputs:
+      PathtoPublish: '$(build.artifactstagingdirectory)'
+      ArtifactName: nuget
 
+- job: 'DotnetBuild'
+  variables:
+    buildArgs: '-property:configuration=release'
+  steps:
+  - task: DotNetCoreCLI@2
+    displayName: 'Build Fody'
+    inputs:
+      command: 'build'
+      projects: 'Fody.sln'
+      arguments: $(buildArgs)
+  - task: DotNetCoreCLI@2
+    displayName: 'Test Fody'
+    inputs:
+      command: 'test'
+      projects: 'Fody.sln'
+      arguments: $(buildArgs)
+  - task: DotNetCoreCLI@2
+    displayName: 'Build Integration'
+    inputs:
+      command: 'build'
+      projects: 'Integration\Integration.sln'
+      arguments: $(buildArgs)
+  - task: DotNetCoreCLI@2
+    displayName: 'Test Integration'
+    inputs:
+      command: 'test'
+      projects: 'Integration\Integration.sln'
+      arguments: $(buildArgs)
 
 
